--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,21 @@
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
+      <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.maven.surefire</groupId>
+                    <artifactId>surefire-junit47</artifactId>
+                    <version>${surefire.version}</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+<!--             <configuration> -->
+<!--                 <groups>com.webapp.api.annotation.type.${group.include}</groups> -->
+<!--                 <excludedGroups>com.webapp.api.annotation.type.${group.exclude}</excludedGroups> -->
+<!--             </configuration> -->
+        </plugin>
     </plugins>
   </build>
   <dependencies>
