--- a/pom.xml
+++ b/pom.xml
@@ -17,20 +17,17 @@
         </configuration>
       </plugin>
       <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <dependencies>
-                <dependency>
-                    <groupId>org.apache.maven.surefire</groupId>
-                    <artifactId>surefire-junit47</artifactId>
-                    <version>${surefire.version}</version>
-                    <scope>test</scope>
-                </dependency>
-            </dependencies>
-<!--             <configuration> -->
-<!--                 <groups>com.webapp.api.annotation.type.${group.include}</groups> -->
-<!--                 <excludedGroups>com.webapp.api.annotation.type.${group.exclude}</excludedGroups> -->
-<!--             </configuration> -->
-        </plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.16</version>
+    <dependencies>
+      <dependency>
+        <groupId>org.apache.maven.surefire</groupId>
+        <artifactId>surefire-junit47</artifactId>
+        <version>2.16</version>
+      </dependency>
+    </dependencies>
+  </plugin>      
     </plugins>
   </build>
   <dependencies>
