--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,21 @@
         <version>2.16</version>
       </dependency>
     </dependencies>
-  </plugin>      
+  </plugin> 
+      
+      <plugin>
+  <groupId>org.sonarsource.scanner.maven</groupId>
+  <artifactId>sonar-maven-plugin</artifactId>
+  <version>3.2</version>
+  <dependencies>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+    </dependency>
+  </dependencies>
+</plugin>
+      
     </plugins>
   </build>
   <dependencies>
